add some more contents

--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ $(document).ready(function() {
 			
 			<!-- FOOTER STARTS -->
 			<footer id="footer">	
-				<p class="copyright"> &copy; 2015 <a href="#">Save the date.</a> All rights reserved.</p>
+				<p class="copyright"> &copy; 2015 <a href="#">Ankush.</a> All rights reserved.</p>
 			</footer>
 			<!-- FOOTER ENDS -->
 			
